<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="need_a_new_account">Need a new Account ?</string>
    <string name="or_login_using_your">or Login Using your</string>
    <string name="phone_number">Phone Number</string>
    <string name="settings">Settings</string>
    <string name="find_friends">Find Friends</string>
    <string name="logout">Logout</string>
    <string name="create_group">Create Group</string>
</resources>