<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/logIn_relative_layout"
    tools:context=".loginsignup.LogInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/wp">

            </ImageView>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_image"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="4dp"

                >

            </EditText>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_email"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="4dp"

                >

            </EditText>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_password"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"

                >

            </TextView>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/buttons"
                android:padding="4dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="24sp">

            </Button>

            <TextView
                android:id="@+id/newAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                android:text="@string/need_a_new_account"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"

                >

            </TextView>

            <TextView
                android:id="@+id/login_phonenumber_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newAccount"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="23dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                android:text="@string/or_login_using_your"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"

                >

            </TextView>

            <Button
                android:id="@+id/phone_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newAccount"
                android:layout_marginStart="20dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/buttons"
                android:drawableStart="@drawable/phone"
                android:padding="4dp"
                android:text="@string/phone_number"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="22sp">

            </Button>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>